[package]
name = "rust_avenue"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
serde = "1.0"
chrono = "0.4"
ordered-float = "3.0"
getrandom = { version = "0.2.3", features = ["js"]}
rand = "0.7.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
