[package]
name = "signals"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
ic-ledger-types = "0.1.0"
serde = "1.0"
chrono = "0.4"
ordered-float = "3.0"
once_cell = "1.9"
parking_lot = "0.12"
ic-certified-map = "0.3"
ic-certified-assets = "0.1"
base64 = "0.13.0"
include-base64 = "0.1"
